Fixed the other overflow bug

--- a/src/app.css
+++ b/src/app.css
@@ -81,7 +81,6 @@ h4 {
 input {
     font-size: inherit;
     font-family: inherit;
-    width: inherit !important;
 }
 
 .card {
